# SNP_annotations

./: README.md  Snakefile  add_annotations.py  check_requirements.sh  collate_annotations.py  config.template.yaml  download_annotations_script.sh  pyproject.toml  requirements_parquet.txt  requirements_snakemake.txt  run_cluster.sh  utils.py
