[project]
name = "snp-annotations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "snakemake>=9.6.0",
    "snakemake-executor-plugin-cluster-generic>=1.0.9",
    "polars>=1.31.0",
    "duckdb>=1.3.1",
]
